--- a/webconsole/branding/src/main/resources/res/karaf/ui/webconsole.css
+++ b/webconsole/branding/src/main/resources/res/karaf/ui/webconsole.css
@@ -48,6 +48,9 @@
 	float: right;
 	height: 73px; /* must be the same as #lead height */
 }
+#lead p img { /* This is the logo */
+	height: 63px; /* must be #lead.height - #lead.padding-top */
+}
 
 
 /* TOP NAVIGATION */
@@ -64,9 +67,8 @@
 }
 
 /* CENTRAL CONTENT AREA STYLING */
-#content {
-	font-size: 8pt;
-}
+#content, .ui-widget, .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-size: 8pt }
+
 
 /* used in some plugins - showing ID (long) element in tables */
 .col_Id {
@@ -168,3 +170,6 @@ ul.icons li {
 	float: left;
 	list-style: none
 }
+/* language selection element */
+#langSelect { position: absolute;	top: 5px; right: 5px }
+#langSelect img   { display: block; padding: 2px 0 }
